Bug 2015600 - new tab small tiles overlap r=home-newtab-reviewers,nbarrett
Differential Revision: https://phabricator.services.mozilla.com/D283333

--- a/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/DSCard/_DSCard.scss
+++ b/browser/extensions/newtab/content-src/components/DiscoveryStreamComponents/DSCard/_DSCard.scss
@@ -623,11 +623,13 @@ $ds-card-image-gradient-solid: rgba(0, 0, 0, 100%);
     justify-content: space-between;
     pointer-events: none;
     margin-block-start: var(--space-xsmall);
+    padding-inline-end: var(--space-large);
 
     .source-wrapper {
       margin-block-end: 0;
       margin-inline-end: var(--space-xxsmall);
-      max-width: 170px;
+      min-width: 0;
+      max-width: min(170px, 100%);
     }
 
     .card-stp-button-hover-background {
